sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:16: error: expected class or object definition
def rBon(i:Int):Boolean = {
^DutchFlagAlgo:25: error: expected class or object definition
def bBon(i:Int):Boolean = {
^DutchFlagAlgo:36: error: Unmatched closing brace '}' ignored here
}
^